misc/perf/benchmark/fortioclient.iptables.log
# Generated by iptables-save v1.4.21 on Thu Aug  5 10:26:23 2021
*nat
:PREROUTING ACCEPT [425277:25516620]
:INPUT ACCEPT [685941:41156460]
:OUTPUT ACCEPT [442794:26870478]
:POSTROUTING ACCEPT [444438:26969118]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 22 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8076 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8077 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8078 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8081 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 9999 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -p tcp -m tcp --dport 80 -j RETURN
-A ISTIO_OUTPUT -p tcp -m tcp --dport 8076 -j RETURN
-A ISTIO_OUTPUT -p tcp -m tcp --dport 8077 -j RETURN
-A ISTIO_OUTPUT -p tcp -m tcp --dport 8078 -j RETURN
-A ISTIO_OUTPUT -p tcp -m tcp --dport 8081 -j RETURN
-A ISTIO_OUTPUT -s 127.0.0.6/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -d 10.222.0.0/16 -j ISTIO_REDIRECT
-A ISTIO_OUTPUT -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Thu Aug  5 10:26:23 2021
